src/compiletest/qcell-12.stderr
error[E0277]: `std::rc::Rc<()>` cannot be sent between threads safely
 --> $DIR/qcell-12.rs:8:5
  |
7 |     fn is_send<T: Send>() {}
  |        -------    ---- required by this bound in `main::is_send`
8 |     is_send::<QCell<Rc<()>>>();  // Compile fail
  |     ^^^^^^^^^^^^^^^^^^^^^^^^ `std::rc::Rc<()>` cannot be sent between threads safely
  |
  = help: within `qcell::QCell<std::rc::Rc<()>>`, the trait `std::marker::Send` is not implemented for `std::rc::Rc<()>`
  = note: required because it appears within the type `std::cell::UnsafeCell<std::rc::Rc<()>>`
  = note: required because it appears within the type `qcell::QCell<std::rc::Rc<()>>`
